--- a/my.html
+++ b/my.html
@@ -1,62 +1,55 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title> Neymar JR </title>
-        <link rel="stylesheet" href="my.css">
-    </head>
-    <body>
-        <div class="content">
-            <div class="div1">
-                <h1 class="title">My Favorite Player</h1>
-                <img 
-                    src= " https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTyH-dfqD7OHjLt7MTuNQ0UJNrzTHEWVfR-6w&s">
-                    <h1 class="title">Datos Personales sobre Neymar JR</h1>
-                    <ul>
-                        <li>Carrera Profesional
-Neymar comenzó su carrera en el Santos F.C., donde debutó profesionalmente a los 17 años. Durante su tiempo en Santos, ganó varios títulos, incluyendo la Copa Libertadores en 2011, donde fue el máximo goleador y mejor jugador del torneo. Su habilidad para el regate y su capacidad goleadora lo llevaron a ser considerado uno de los mejores jóvenes talentos del mundo.
-En 2013, Neymar fue transferido al FC Barcelona, donde formó parte de un trío ofensivo legendario junto a Lionel Messi y Luis Suárez, conocido como MSN. Con el Barcelona, ganó múltiples títulos, incluyendo la Liga de Campeones de la UEFA y la Liga Española. En 2017, Neymar se trasladó al Paris Saint-Germain (PSG) por una cifra récord de 222 millones de euros, convirtiéndose en el traspaso más caro de la historia del fútbol. En el PSG, continuó acumulando títulos y estableciendo récords, siendo un jugador clave en el equipo.
-</li>
-                        <li>Nombre Completo: Neymar da Silva Santos Júnior</li>
-                        <li>Fecha de Nacimiento: 5 de febrero de 1992 (31 años)</li>
-                        <li>Lugar de Nacimiento: Mogi das Cruzes, São Paulo, Brasil</li>
-                        <li>Nacionalidad: Brasil</li>
-                        <li>Deporte Favorito: Fútbol</li>
-                        <li>Posición: Delantero</li>
-                        <li>Club Actual: Santo F.C</li>
-                        <li>Número de Camiseta: 10</li>
-                    </ul>
-                <h1 class="subtitle">Redes Sociales</h1>
-                <li><a href="https://www.instagram.com/neymarjr/">Instagram: @neymarjr</a></li>
-                <li><a href="https://twitter.com/neymarjr">Twitter: @neymarjr</a></li>
-                <li><a href="https://www.facebook.com/neymarjr">Facebook: Neymar Jr</a></li>
-                <li><a href="https://www.tiktok.com/@neymarjr">TikTok: @neymarjr</a></li>
-                <h1 class="subtitle">Logros Destacados</h1>
-                <ul>
-                    <li class="title">Campeón de la Copa Libertadores con Santos (2011)</li>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSqrKAikb8zK5sL6GWB6Fy6fC34A4kw9enfiQ&s" alt="Copa Libertadores" height="200" width="200">
-                    <li class="title">Campeón de la Copa del Rey con Barcelona (2015)</li>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlXw2pwj98_BCwSECDXUS0bI_jJzzKNo8Zlw&s " alt="Copa del Rey" height="200" width="200">
-                    <li class="title">Campeón de la Liga Española con Barcelona (2013-2017)</li>
-                    <img src="https://i.pinimg.com/736x/a0/8e/b7/a08eb75a0bae8f004e30d566e62ebd7b.jpg " alt="La Liga" height="200" width="200">
-                    <li class="title">Campeón de la Liga de Campeones de la UEFA con Barcelona (2015)</li>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTMRLeQkIDW6azkwbdNpC-tUkVYJCwyc5mTYw&s " alt="UEFA Champions League" height="200" width="200">
-                    <li class="title">Campeón de la Supercopa de España con Barcelona (2016)</li>
-                    <img src="https://i.pinimg.com/736x/45/ef/4e/45ef4e947abd93d0a4d6f500956009b1.jpg " alt="Supercopa de España" height="200" width="200">
-                    <li class="title">Campeón de la Copa Mundial de Clubes de la FIFA con Barcelona (2015)</li>
-                    <img src="https://i.pinimg.com/736x/7d/b1/f1/7db1f13b092c0182eac27ffd695b7aef.jpg " alt="Copa Mundial de Clubes" height="200" width="200">
-                    <li class="title">Campeón de la Ligue 1 con PSG (2013-2020)</li>
-                    <img src="https://estaticos-cdn.prensaiberica.es/clip/8a7103ae-e91c-40b3-bc0b-fc9a0617e816_alta-libre-aspect-ratio_default_0.jpg " alt="Ligue 1" height="200" width="200">
-                    <li class="title">Subcampeón de la UEFA Champions League con PSG (2020)</li>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2SolfkgirTqjyPvI2tfmb3cmAoeeV2Ab3rQ&s " alt="UEFA Champions League" height="200" width="200">
-                    <li class="title">Medalla de Oro en los Juegos Olímpicos de Río 2016 con Brasil</li>
-                    <img src="https://www.eluniverso.com/resizer/v2/WPQA2FZOPNAORM5Y6JF475UZFY.jpg?auth=ffdac1bbd5d551816e5bd9aef67569da222f9b1d400586ccbcc2d73b50c43135&width=436&height=670&quality=75&smart=true " alt="Juegos Olímpicos" height="200" width="200">
-                    <li class="title">Campeón de la Copa América con Brasil (2019)</li>
-                    <img src="https://cdn.resfu.com/media/img_news/thiago-silva-y-neymar-posan-con-la-copa-america-lograda-por-brasil-en-2019--instagram-thiagosilva.jpg " alt="Copa América" height="200" width="200">
-                    <li class="title">Máximo goleador histórico de la selección brasileña en competiciones oficiales</li>
-                    <img src="https://a1.espncdn.com/combiner/i?img=%2Fphoto%2F2023%2F0909%2Fr1221960_1296x729_16%2D9.jpg " alt="Máximo goleador histórico" height="200" width="200">
-                </ul>
-            </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Favorite Player</title>
+    <link rel="stylesheet" href="my.css">
+</head>
+<body>
+    <div class="content">
+        <h1 class="title">Datos personales de mi jugador favorito</h1>
+        <div class="div1">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT79DWaeqrszgo6yiMb6JKEPJitDgFR35USKLFAkyuELiI3A-Ocr9Nu2rydzKu-6LpPgpg&usqp=CAU" alt="Foto de perfil">
+            <h2 class="subtitle">Información Básica</h2>
+            <ul>
+                <li>Nombres Completos: Neymar da Silva Santos Júnior</li>
+                <li>Fecha de Nacimiento: 5 de febrero de 1992</li>
+                <li>Edad: 33 años</li>
+                <li>Nacionalidad: Brasileña</li>
+                <li>Profesión: Futbolista</li>
+                <li>Equipo Actual: Santos FC</li>
+                <li>Posición: Delantero</li>
+                <li>Altura: 1.75 m</li>
+                <li>Peso: 68 kg</li>
+                <li>Pie Dominante: Derecho</li>
+            </ul>
+            <h2 class="subtitle">Trayectoria Profesional</h2>
+            <ul>
+                <li>Trayectoria en el Santos FC (2009-2013)</li>
+                <li>Transferencia al FC Barcelona (2013-2017)</li>
+                <li>Transferencia al Paris Saint-Germain (2017-2022)</li>
+                <li>Transferencia al Al-Hilal (2023-2024)</li>
+                <li>Regreso al Santos FC (2024-presente)</li>
+            </ul>
+            <h2 class="subtitle">Logros Destacados</h2>
+            <ul>
+                <li>Campeón de la Copa Libertadores con el Santos FC (2011).</li> <img src="https://tse2.mm.bing.net/th/id/OIP.ouKBno0MFFMLVYsalt3b_QHaFn?rs=1&pid=ImgDetMain&o=7&rm=3" alt="5">
+                <li>Ganador de la Champions League con el FC Barcelona (2015).</li> <img src="https://e00-marca.uecdn.es/assets/multimedia/imagenes/2020/08/19/15977924396927.jpg" alt="5">
+                <li>Campeón del Mundial de Clubes de la FIFA (2015).</li> <img src="https://i.pinimg.com/736x/c8/d5/e7/c8d5e70d2837000366dd628bdbd2bf31.jpg" alt="5">
+                <li>Campeón de la Supercopa de España (2016).</li> <img src="https://ep00.epimg.net/deportes/imagenes/2013/08/28/album/1377723728_878396_1377731861_album_normal.jpg" alt="5">
+                <li>Medalla de Oro en los Juegos Olímpicos de Río 2016.</li> <img src="https://i.pinimg.com/736x/41/14/e7/4114e75fe3a556c98f4beba833dbab2d.jpg" alt="5">
+                <li>Premio FIFA Puskás al Mejor Gol (2011).</li> <img src="https://i.dailymail.co.uk/i/pix/2012/01/10/article-2084585-0F64C5DE00000578-132_1024x615_large.jpg" alt="5">
+            </ul>
+            <h2 class="subtitle">Redes Sociales</h2>
+            <p>
+                <li>Sigue a Neymar Jr en sus redes sociales:</li>
+                <a href="https://www.instagram.com/neymarjr" target="_blank">Instagram</a>,
+                <a href="https://twitter.com/neymarjr" target="_blank">Twitter</a>,
+                <a href="https://www.facebook.com/neymarjr" target="_blank">Facebook</a>,
+                <a href="https://www.tiktok.com/@neymarjr" target="_blank">TikTok</a>.
+            </p>
         </div>
-    </body>
+    </div>
+</body>
 </html>
-
